import uuid
from datetime import datetime

from sqlalchemy import Boolean, CheckConstraint, DateTime, Integer, String, Text, func
from sqlalchemy.dialects.postgresql import UUID
from sqlalchemy.orm import Mapped, mapped_column, relationship

from app.db.base import Base


class Exam(Base):
    __tablename__ = "exams"
    __table_args__ = (
        CheckConstraint("exam_type IN ('mcq', 'written')", name="ck_exams_exam_type"),
    )

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
    exam_code: Mapped[str] = mapped_column(String(6), nullable=False, unique=True, index=True)
    title: Mapped[str] = mapped_column(String(255), nullable=False, unique=True)
    exam_type: Mapped[str] = mapped_column(String(20), nullable=False, server_default="written")
    instructions: Mapped[str | None] = mapped_column(Text, nullable=True)
    time_limit_minutes: Mapped[int] = mapped_column(Integer, nullable=False)
    is_available: Mapped[bool] = mapped_column(Boolean, nullable=False, server_default="true")
    is_ended: Mapped[bool] = mapped_column(Boolean, nullable=False, server_default="false")
    ended_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True), nullable=True)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), server_default=func.now(), nullable=False)

    questions = relationship(
        "Question",
        back_populates="exam",
        cascade="all, delete-orphan",
        order_by="Question.order_index",
    )
    attempts = relationship("Attempt", back_populates="exam", cascade="all, delete-orphan")
