@startuml
hide methods
hide stereotypes
skinparam shadowing false
skinparam linetype ortho


entity "User" as User {
  * id : UUID
  --
  username : String <<unique>>
  password_hash : String
  role : String
  created_at : DateTime
}

entity "Exam" as Exam {
  * id : UUID
  --
  exam_code : String(6) <<unique>>
  title : String <<unique>>
  exam_type : String
  instructions : Text
  time_limit_minutes : Integer
  is_available : Boolean
  is_ended : Boolean
  ended_at : DateTime
  created_at : DateTime
}

entity "Question" as Question {
  * id : UUID
  --
  exam_id : UUID <<FK>>
  text : String
  points : Float
  order_index : Integer
  created_at : DateTime
}

entity "QuestionOption" as QuestionOption {
  * id : UUID
  --
  question_id : UUID <<FK>>
  option_text : String
  is_correct : Boolean
  order_index : Integer
}

entity "Attempt" as Attempt {
  * id : UUID
  --
  user_id : UUID <<FK>>
  exam_id : UUID <<FK>>
  graded_by_user_id : UUID <<FK, nullable>>
  started_at : DateTime
  submitted_at : DateTime
  status : String
  score : Float
  graded_at : DateTime
}

entity "Answer" as Answer {
  * id : UUID
  --
  attempt_id : UUID <<FK>>
  question_id : UUID <<FK>>
  answer_text : Text
  selected_option_ids : JSON
  saved_at : DateTime
}

entity "Violation" as Violation {
  * id : UUID
  --
  attempt_id : UUID <<FK>>
  type : String
  details : Text
  created_at : DateTime
}

entity "Screenshot" as Screenshot {
  * id : UUID
  --
  attempt_id : UUID <<FK>>
  file_path : String
  captured_at : DateTime
}

Exam ||--o{ Question
Question ||--o{ QuestionOption

User ||--o{ Attempt : creates
Exam ||--o{ Attempt : has
User |o--o{ Attempt : grades

Attempt ||--o{ Answer
Question ||--o{ Answer

Attempt ||--o{ Violation
Attempt ||--o{ Screenshot


@enduml
